Slight changes to style, Calculator layout and fixing period bugs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 <div class="calcLayout">
-<input class="display"></input>
+<input class="display">
+<div class="columns">
 <div class="first">
     <button id="AC" class="grow">AC</button>
    <!--<button id="plusmin" class="grow">+/-</button>-->
@@ -38,6 +39,7 @@
     <button id="zero" class="grow isNumber">0</button>
     <button id="point" class="grow">.</button>
     <button id="eql" class="grow">=</button>
+</div>
 </div>
 </div>
 </body>
