--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
    <!--<button id="plusmin" class="grow">+/-</button>-->
     <button id="perc" class="grow">%</button>
     <button id="div" class="grow isOpeartion">/</button>
+    <button id="del" class="grow isOpeartion">Del</button>
 </div>
 <div class="second">
     <button id="sev" class="grow isNumber">7</button>
